--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,197 +1,196 @@
 # GitLab CI/CD for RSS 알림 스케줄러
-# GitLab Runner에서 자동으로 실행되는 RSS 알림 시스템
+# GitHub Actions와 동일한 스펙으로 구현된 RSS 알림 시스템
+# 
+# 스케줄 실행:
+# GitLab: Project Settings > CI/CD > Schedules 에서 설정
+# - */1 * * * * : 1분마다 실행 (테스트용)
+# - 0 0 * * * : 매일 KST 09:00 (UTC 00:00)
+# - 0 3 * * * : 매일 KST 12:00 (UTC 03:00)
+# - 0 6 * * * : 매일 KST 15:00 (UTC 06:00)
+# - 0 9 * * * : 매일 KST 18:00 (UTC 09:00)
 
 # 스테이지 정의
 stages:
-  - setup
-  - test
   - notify
 
 # 기본 이미지 설정
 image: node:20-alpine
 
-# 캐시 설정
-cache:
-  paths:
-    - node_modules/
-    - .pnpm-store/
-    - .cache/
-
 # 전역 변수 설정
 variables:
   TZ: "Asia/Seoul"
   NODE_ENV: "production"
-  LOG_LEVEL: "info"
-  PNPM_CACHE_FOLDER: .pnpm-store
-  npm_config_cache: .pnpm-store
+  LOG_LEVEL: "debug"  # 디버그 로그 활성화
+  CI: "true"  # CI 환경 명시 (파일 캐시 모드 활성화)
+  PNPM_CACHE_FOLDER: ".pnpm-store"
+  npm_config_cache: ".pnpm-store"
+  # 날짜 변수 (캐시 키용)
+  CACHE_DATE: "${CI_PIPELINE_CREATED_AT}"
 
-# 공통 설정 템플릿
-.common_setup: &common_setup
-  - echo "🚀 GitLab CI/CD RSS 알림 시스템 시작"
-  - apk update && apk add --no-cache tzdata
-  - cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime
-  - echo "Asia/Seoul" > /etc/timezone
-  - corepack enable
-  - corepack prepare pnpm@10.14.0 --activate
-  - pnpm config set store-dir .pnpm-store
+# 캐시 설정 (GitHub Actions cache와 동등)
+cache:
+  key:
+    files:
+      - package.json
+      - pnpm-lock.yaml
+    prefix: "rss-daily-cache-${CI_COMMIT_REF_SLUG}"
+  paths:
+    - .pnpm-store/
+    - node_modules/
+    - .cache/
+  policy: pull-push
 
-# Job 템플릿 정의
-.job_template: &job_template
+# Job 기본 설정
+default:
   timeout: 30m
-  before_script:
-    - *common_setup
-    - pnpm install --frozen-lockfile
   retry:
     max: 2
     when:
       - runner_system_failure
       - stuck_or_timeout_failure
-
-# 의존성 설치 및 캐시 생성
-setup:
-  stage: setup
-  <<: *job_template
-  script:
-    - echo "📦 의존성 설치 및 검증"
+  before_script:
+    # 시스템 설정
+    - echo "🚀 GitLab CI/CD RSS 알림 시스템 시작"
+    - apk update && apk add --no-cache tzdata jq
+    - cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime
+    - echo "Asia/Seoul" > /etc/timezone
+    - date '+%Y-%m-%d %H:%M:%S %Z'
+    
+    # pnpm 설치
+    - echo "📦 pnpm 설치"
+    - corepack enable
+    - corepack prepare pnpm@10.14.0 --activate
+    - pnpm config set store-dir .pnpm-store
+    
+    # 의존성 설치
+    - echo "📦 의존성 설치"
     - pnpm install --frozen-lockfile
-    - echo "✅ 설정 완료"
-  artifacts:
-    paths:
-      - node_modules/
-      - .pnpm-store/
-    expire_in: 1 hour
-  only:
-    - main
-    - develop
-    - merge_requests
-
-# 테스트 실행 (선택적)
-test:
-  stage: test
-  <<: *job_template
-  script:
-    - echo "🧪 필터링 시스템 테스트"
+    
+    # 캐시 디렉토리 생성 (없는 경우)
     - |
-      if [ -f "src/test/aiFilterTest.js" ]; then
-        node src/test/aiFilterTest.js || echo "⚠️ AI 필터 테스트 경고 발생"
+      if [ ! -d ".cache" ]; then
+        mkdir -p .cache
+        echo '{}' > .cache/rss-daily-cache.json
+        echo "📂 캐시 디렉토리 및 파일 생성 완료"
       fi
+    
+    # 환경 변수 파일 생성
     - |
-      if [ -f "src/test/lenientFilterTest.js" ]; then
-        node src/test/lenientFilterTest.js || echo "⚠️ 관대한 필터 테스트 경고 발생"
+      cat > .env << EOF
+      TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+      WEBHOOK_SECRET=${WEBHOOK_SECRET}
+      NODE_ENV=production
+      LOG_LEVEL=info
+      TZ=Asia/Seoul
+      PORT=3000
+      RSS_SCHEDULE_CRON=30 8 * * *
+      CI=true
+      EOF
+    
+    # 환경 변수 확인 (디버깅용)
+    - |
+      echo "📋 환경 변수 설정 확인:"
+      echo "   - Environment: ${CI_ENVIRONMENT_NAME:-production}"
+      echo "   - NODE_ENV: $NODE_ENV"
+      echo "   - LOG_LEVEL: $LOG_LEVEL"
+      echo "   - TZ: $TZ"
+      echo "   - CI: $CI"
+      if [ -n "$TELEGRAM_BOT_TOKEN" ]; then
+        echo "   - TELEGRAM_BOT_TOKEN: ✅ 설정됨"
+      else
+        echo "   - TELEGRAM_BOT_TOKEN: ❌ 누락"
       fi
-    - echo "✅ 테스트 완료"
-  allow_failure: true
-  only:
-    variables:
-      - $RUN_TESTS == "true"
+      if [ -n "$TELEGRAM_CHAT_ID" ]; then
+        echo "   - TELEGRAM_CHAT_ID: ✅ 설정됨"
+      else
+        echo "   - TELEGRAM_CHAT_ID: ❌ 누락"
+      fi
+      echo "   - 실행 시간: $(date +'%Y-%m-%d %H:%M:%S %Z')"
 
 # RSS 알림 실행 - 스케줄 기반
 rss-notification-scheduled:
   stage: notify
-  <<: *job_template
   script:
-    - echo "⏰ 스케줄 기반 RSS 알림 실행"
+    - echo "⏰ 스케줄 실행"
+    - echo "📅 필터 날짜: 최근 1일"
+    - echo "💾 캐시 모드: 파일 (CI=true)"
+    
+    # RSS 알림 실행 (캐시 사용)
+    - export CI=true
+    - node index.js --filter-days=1
+    
+    # 캐시 파일 상태 확인
     - |
-      # 환경 변수 파일 생성
-      cat > .env << EOF
-      TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
-      WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      NODE_ENV=production
-      LOG_LEVEL=info
-      TZ=Asia/Seoul
-      PORT=3000
-      RSS_SCHEDULE_CRON=30 8 * * *
-      EOF
-    - echo "📱 RSS 피드 확인 및 알림 전송"
-    - node index.js --once --filter-days=1
-    - echo "✅ RSS 알림 완료 - $(date '+%Y-%m-%d %H:%M:%S KST')"
-  # 스케줄 실행: 매일 KST 09:00, 12:00, 15:00, 18:00
-  # GitLab 스케줄은 웹 인터페이스에서 설정해야 함
+      echo "📂 캐시 파일 확인:"
+      if [ -f .cache/rss-daily-cache.json ]; then
+        echo "   - 캐시 파일 존재 ✅"
+        echo "   - 파일 크기: $(du -h .cache/rss-daily-cache.json | cut -f1)"
+        echo "   - 캐시 통계:"
+        CACHE_SIZE=$(jq 'to_entries | map(.value | length) | add' .cache/rss-daily-cache.json 2>/dev/null || echo "0")
+        echo "     총 캐시된 항목: ${CACHE_SIZE}개"
+      else
+        echo "   - 캐시 파일 없음 ⚠️"
+      fi
+    
+    - echo "✅ RSS 알림 완료 - $(date '+%Y-%m-%d %H:%M:%S %Z')"
   only:
     - schedules
   environment:
     name: production
+    url: https://gitlab.com/${CI_PROJECT_PATH}
 
-# RSS 알림 실행 - 수동 실행
+# RSS 알림 실행 - 수동 실행 (once 모드)
 rss-notification-manual:
   stage: notify
-  <<: *job_template
   script:
-    - echo "🚀 수동 RSS 알림 실행"
+    - echo "🚀 수동 실행 모드"
+    - echo "📅 필터 날짜: 최근 1일"
+    - echo "💾 캐시 모드: 파일 (CI=true)"
+    
+    # RSS 알림 실행 (캐시 사용)
+    - export CI=true
+    - node index.js --filter-days=1
+    
+    # 캐시 파일 상태 확인
     - |
-      # 환경 변수 파일 생성
-      cat > .env << EOF
-      TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
-      WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      NODE_ENV=production
-      LOG_LEVEL=info
-      TZ=Asia/Seoul
-      PORT=3000
-      RSS_SCHEDULE_CRON=30 8 * * *
-      EOF
-    - |
-      # 실행 모드 결정
-      if [ "$EXECUTION_MODE" = "schedule" ]; then
-        echo "📅 스케줄 모드로 실행"
-        node index.js
-      elif [ "$EXECUTION_MODE" = "test" ]; then
-        echo "🧪 테스트 모드로 실행"
-        node index.js --once --dry-run --filter-days=3
+      echo "📂 캐시 파일 확인:"
+      if [ -f .cache/rss-daily-cache.json ]; then
+        echo "   - 캐시 파일 존재 ✅"
+        echo "   - 파일 크기: $(du -h .cache/rss-daily-cache.json | cut -f1)"
+        echo "   - 캐시 통계:"
+        CACHE_SIZE=$(jq 'to_entries | map(.value | length) | add' .cache/rss-daily-cache.json 2>/dev/null || echo "0")
+        echo "     총 캐시된 항목: ${CACHE_SIZE}개"
       else
-        echo "🎯 한번 실행 모드 (기본값)"
-        node index.js --once --filter-days=1
+        echo "   - 캐시 파일 없음 ⚠️"
       fi
-    - echo "✅ RSS 알림 완료 - $(date '+%Y-%m-%d %H:%M:%S KST')"
-  # 수동 실행만 허용
+    
+    - echo "✅ RSS 알림 완료 - $(date '+%Y-%m-%d %H:%M:%S %Z')"
   when: manual
   only:
     - main
+    - master
     - develop
   environment:
     name: production
-  # 커스텀 변수 지원
-  variables:
-    EXECUTION_MODE: "once"  # once, schedule, test
+    url: https://gitlab.com/${CI_PROJECT_PATH}
 
-# 긴급 알림 실행 (즉시 실행)
-rss-notification-urgent:
-  stage: notify
-  <<: *job_template
-  script:
-    - echo "🚨 긴급 RSS 알림 실행"
-    - |
-      # 환경 변수 파일 생성
-      cat > .env << EOF
-      TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
-      WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      NODE_ENV=production
-      LOG_LEVEL=info
-      TZ=Asia/Seoul
-      PORT=3000
-      EOF
-    - echo "⚡ 긴급 모드: 최근 3일간 업데이트 확인"
-    - node index.js --once --filter-days=3
-    - echo "✅ 긴급 알림 완료 - $(date '+%Y-%m-%d %H:%M:%S KST')"
-  # 수동 실행, 언제든 가능
-  when: manual
-  allow_failure: false
-  environment:
-    name: production
-
-# 실행 후 정리 작업
+# 실행 후 정리
 after_script:
-  - echo "🧹 정리 작업"
+  - |
+    echo "📊 실행 요약:"
+    echo "   - 실행 시간: $(date +'%Y-%m-%d %H:%M:%S %Z')"
+    echo "   - 파이프라인 ID: $CI_PIPELINE_ID"
+    echo "   - 작업 상태: $CI_JOB_STATUS"
+  - |
+    if [ "$CI_JOB_STATUS" = "success" ]; then
+      echo "✅ RSS 알림 실행 완료"
+    else
+      echo "❌ RSS 알림 실행 실패"
+      echo "   - 오류 발생 시점을 확인하세요"
+    fi
   - |
     if [ -f ".env" ]; then
       rm -f .env
-      echo "환경 변수 파일 정리 완료"
+      echo "🧹 환경 변수 파일 정리 완료"
     fi
-  - |
-    if [ -d "logs" ]; then
-      echo "📊 로그 통계:"
-      find logs -name "*.log" -type f -exec wc -l {} + 2>/dev/null || echo "로그 파일 없음"
-    fi
-  - echo "🎉 작업 완료 - $(date '+%Y-%m-%d %H:%M:%S KST')"
